<resources>
    <string name="app_name">S5UESANFragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_register">Register</string>
    <string name="title_music">Music</string>
    <string name="title_fragments">Fragmentos en Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valetfullname">Enter your Full Name</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtothers">Others</string>
    <string name="valchklicense">License</string>
    <string name="valchkcar">Car?</string>
    <string name="valbtnsave">Save</string>


    <string-array name="country_array">
        <item>Perú</item>
        <item>Venezuela</item>
        <item>Colombia</item>
        <item>Chile</item>
        <item>Ecuador</item>
        <item>Uruguay</item>
    </string-array>


</resources>